--- a/01-init/package.json
+++ b/01-init/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "bun-http-server",
+  "name": "01-init",
   "module": "index.ts",
   "type": "module",
-  "scripts": {
-    "start": "bun run index.ts"
-  },
   "devDependencies": {
-    "@types/figlet": "^1.5.7",
     "bun-types": "latest"
+  },
+  "scripts": {
+    "dev": "bun --watch run index.ts",
+    "start": "bun run index.ts"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
   },
   "dependencies": {
-    "figlet": "^1.7.0"
+    "axios": "^1.6.0"
   }
 }
