--- a/01-init/package.json
+++ b/01-init/package.json
@@ -3,9 +3,12 @@
   "module": "index.ts",
   "type": "module",
   "devDependencies": {
+    "@types/react": "^18.2.33",
+    "@types/react-dom": "^18.2.14",
     "bun-types": "latest"
   },
   "scripts": {
+    "build": "bun build ./src/index.tsx --outfile=./dist/bundle.js --watch",
     "dev": "bun --watch run index.ts",
     "start": "bun run index.ts"
   },
@@ -13,6 +16,8 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
-    "axios": "^1.6.0"
+    "axios": "^1.6.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
