--- a/01-init/tsconfig.json
+++ b/01-init/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "lib": ["ESNext"],
+    "lib": ["ESNext","DOM.Iterable","DOM"],
     "module": "esnext",
     "target": "esnext",
     "moduleResolution": "bundler",
