#02- Crm configurando el servidor y el bundle que nos ofrece bun.

--- a/02-crm/package.json
+++ b/02-crm/package.json
@@ -5,6 +5,10 @@
   "devDependencies": {
     "bun-types": "latest"
   },
+  "scripts": {
+    "build": " bun --watch build ./crm.ts --outdir ../../public",
+    "start": "bun start"
+  },
   "peerDependencies": {
     "typescript": "^5.0.0"
   }
