--- a/05-ssr-routing/tsconfig.json
+++ b/05-ssr-routing/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "lib": ["ESNext","DOM","DOM.Iterable"],
+    "lib": ["ESNext","DOM","DOM.Iterable","dom"],
     "module": "esnext",
     "target": "esnext",
     "moduleResolution": "bundler",
@@ -19,4 +19,5 @@
       "bun-types" // add Bun global
     ]
   }
+/*   , "include": ["/"] */
 }
