#08-API-REST - CRUD, controlador y rutas.

--- a/08-api-rest/package.json
+++ b/08-api-rest/package.json
@@ -1,9 +1,10 @@
 {
   "name": "08-api-rest",
-  "module": "src/index.ts",
+  "module": "index.ts",
   "type": "module",
   "scripts": {
-    "dev": "bun run --watch src/index.ts"
+    "dev": "bun run --watch ./src/index.ts",
+    "build": "bun build --target=bun ./src/index.ts --outfile=server.js"
   },
   "devDependencies": {
     "bun-types": "latest"
